# effectionx

./: .coderabbit.yaml  .env  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION_PLAN.md  README.md  biome.json  chat-session-20250817-183432.md  dagger.json  deno.json  downgraded-dependencies.md  package.json  package.v3.json  package.v4.json  path-dependencies.md  pnpm-lock.yaml  pnpm-workspace.yaml  run-test-v3-stress.sh  run-test-v4-stress.sh  test-v3-node.sh  test-v3.sh  test-v4-node.sh  test-v4.sh  tsconfig.build.check.json  tsconfig.check.json  tsconfig.json  tsconfig.test.json  turbo.json  v3-test-summary.md  v4.importmap.json  vitest.config.ts
.agents/: policy-officer.md
.codesandbox/: Dockerfile  tasks.json
.dagger/: package-lock.json  package.json
.internal/: check-versions.ts  effection-compat.ts  gather-tags.ts  generatorics.d.ts  package.json  preview-matrix.ts  publish-complete.ts  publish-matrix.ts  strip-dev-exports.ts  sync-tsrefs.ts  tap-parser.ts  test-matrix.ts  tsconfig.json
.policies/: backwards-compatibility.md  composable-units.md  correctness-invariants.md  deterministic-tests.md  documentation.md  ergonomics.md  focused-prs.md  index.md  minimal-apis.md  naming-consistency.md  no-agent-marketing.md  no-sleep-test-sync.md  package-json-metadata.md  server-is-the-build.md  start-with-why.md  stateless-streams.md  structured-concurrency.md  template.md  type-driven-design.md  version-bump.md
DOCS/: MIGRATION_PLAN.md  (+3 more)
bdd/: bdd.ts  (+8 more)
inline/swc/: Cargo.toml
inline/swc/.cargo/: config.toml
inline/swc/src/: lib.rs
(+572 files in other folders)
